# dev-wellbeing

./: README.md  index.html  package.json  pnpm-lock.yaml
notes/: notes.txt
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  notification.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  icon.rs  main.rs
src/components/: DailyUsesView.jsx  Home.jsx  MonthlyUsage.jsx  WeeklyUsage.jsx  YearlyUsage.jsx
src/components/common/: Footer.jsx  LoadingApp.jsx  TabDropdown.jsx
src/components/contex-switching/: ContextSwitchPanel.jsx
src/components/graphs/: DailyAppUsesChart.jsx  DailyTimelineChart.jsx
src/components/pomodoro/: Pomodoro.jsx
src/reusable/: UsageChart.jsx
src/utils/auto-restart/: AutoRestartPrompt.jsx
src/utils/date-time/: DatePickerAndSelection.jsx  TimeLineDatePicker.jsx  addDays.js  formatDateShort.js  formatPrettyDate.js  formatSeconds.js  getTodayDate.js  getWeekRange.js
src/utils/icons/: appIcon.js
src/utils/matix/: Metric.jsx  getTopTransition.js
src/utils/notifications/: notificationMessages.js
src/utils/string-formate/: formatAppName.js
