[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
dirs = "5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

# SQLite
rusqlite = { version = "0.30", features = ["bundled"] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

chrono = { version = "0.4", features = ["clock"] }
dirs = "5.0"

rusqlite = { version = "0.30", features = ["bundled"] }

windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }



