[package]
name = "app"
version = "1.5.0"
description = "Dev Wellbeing"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
image = "0.24"
base64 = "0.22"
tauri = { version = "2.9.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-single-instance = "2"

# Plugins
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5.0"
rand = "0.9.2"
rusqlite = { version = "0.30", features = ["bundled"] }
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem"
] }
